columns fixed size on mobile

--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,17 @@ h2 {
 	grid-row: 2/span 2;
 	grid-column: 9/-1;
 	border-radius: 8px;
+	display: inline-block;
 }
 @media (max-width: 1500px) {
+	.container {
+	display: grid;
+	width: 100%;
+	grid-gap: 5px;
+	grid-template-rows: auto;
+	grid-template-columns: repeat(12,150px);
+	grid-auto-rows: minmax(300px, auto);
+	}
 	body {
 	font-size: 1.1em;
 	}
@@ -96,6 +105,7 @@ h2 {
 	}
 	.header h2 {
 	font-size: 2em;
+	text-align:right;
 	}
 	.profilePic {
 	height: 14vw;
